# csvparser

./: .gitignore  Cargo.toml  LICENSE  README.md  csvparser_pd.py
python/: README.md  csvparser.py
scripts/: benchmark.sh  generate_test_data.py
src/: config.rs  error.rs  lib.rs  main.rs  processor.rs  stats.rs  stream.rs
