[package]
name = "csvparser"
version = "0.1.0"
edition = "2021"
authors = ["Masato Jingu <13431028+m-jingu@users.noreply.github.com>"]
description = "High-performance CSV parser for large files (up to 100GB)"
license = "MIT"
repository = "https://github.com/m-jingu/csvparser"
homepage = "https://github.com/m-jingu/csvparser"
documentation = "https://docs.rs/csvparser"
keywords = ["csv", "parser", "performance", "streaming", "large-files"]
categories = ["command-line-utilities", "data-structures", "parsing"]
readme = "README.md"

[[bin]]
name = "csvparser"
path = "src/main.rs"

[dependencies]
# CSV parsing and processing
csv = "1.3"

# Command-line interface
clap = { version = "4.4", features = ["derive"] }

# Async runtime
tokio = { version = "1.0", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Logging and tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Utilities
bytes = "1.5"
futures = "0.3"
memmap2 = "0.9"

# Release profile optimizations for maximum performance
[profile.release]
opt-level = 3          # Maximum optimization
lto = true            # Link-time optimization
codegen-units = 1     # Single codegen unit for better optimization
panic = "abort"       # Smaller binary size
strip = true          # Remove debug symbols

# Development profile for faster compilation
[profile.dev]
opt-level = 0         # No optimization for faster compilation
debug = true          # Include debug information
